tests/error/comptime/pointer_arithmetic14.bz
function test()
{
	(consteval {
		let a: [[5: int32], [5: int32]];
		&a[0, 0] + 3 + 3;
	});
}
